Updated BrokenLink class from deprecated URL to URI